Bug 4954 - Correct the memset arguments in processor_idle.c
Summary: Correct the memset arguments in processor_idle.c
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Processor (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Venkatesh Pallipadi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-07-27 18:14 UTC by Venkatesh Pallipadi
Modified: 2005-08-03 21:35 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.13-rc3
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
Patch that fixes the memsets in processor_idle.c (1.24 KB, patch)
2005-07-27 18:16 UTC, Venkatesh Pallipadi
Details | Diff

Description Venkatesh Pallipadi 2005-07-27 18:14:58 UTC
Two memsets in processor_idle.c have wrong arguments. Correct it.
Comment 1 Venkatesh Pallipadi 2005-07-27 18:16:48 UTC
Created attachment 5391 [details]
Patch that fixes the memsets in processor_idle.c
Comment 2 Andrew Morton 2005-07-27 18:21:43 UTC
I don't think there's a need to raise and close a bug in bugzilla
like this.  Please just mail out the patch.
Comment 3 Len Brown 2005-07-29 12:56:18 UTC
applied to-linus
Comment 4 Len Brown 2005-08-03 21:35:32 UTC
shipped in 2.6.13-rc5 -- closing.

Note You need to log in before you can comment on or make changes to this bug.