[ACPI] Fix memset arguments in acpi processor_idle.c

http://bugzilla.kernel.org/show_bug.cgi?id=4954

Signed-off-by: Venkatesh Pallipadi <venkatesh.pallipadi@intel.com>
Signed-off-by: Len Brown <len.brown@intel.com>